src/test/testData/inspections/remoteConstructorExprs.elambda
knownCtr = remoteConstructorExprsAux.KnownCtr();
unknownCtr = remoteConstructorExprsAux.<error descr="Constructor 'remoteConstructorExprsAux.UnknownCtr' undefined">UnknownCtr</error>();
unknownMod = <error descr="Module 'remoteConstructorExprs1' undefined">remoteConstructorExprs1</error>.UnknownCtr();
